# MiniSfM

./: .gitignore  CMakeLists.txt  README.md
include/: feature.h  geometry.h  optimization.h  sfm_system.h  viewer.h
src/: feature.cpp  geometry.cpp  main.cpp  sfm_system.cpp  viewer.cpp
